--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,151 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Common color management -->
+    <color name="bg_00">#000000</color>
+    <color name="bg_40000000">#40000000</color>
+    <color name="bg_00000000">#00ffffff</color>
+
+    <color name="bg_e6000000">#E6ffffff</color>
+    <color name="bg_ff000000">#ffffffff</color>
+    <color name="bg_22">#1f1f1f</color>
+    <color name="bg_33">#333333</color>
+    <color name="bg_ee_33">#ee333333</color>
+    <color name="bg_40">#404040</color>
+    <color name="bg_4A">#4A4A4A</color>
+    <color name="bg_4E">#4E4E4E</color>
+    <color name="bg_51">#515151</color>
+    <color name="bg_61">#616161</color>
+    <color name="bg_66">#666666</color>
+    <color name="bg_80">#808080</color>
+    <color name="bg_85">#858585</color>
+    <color name="bg_99">#999999</color>
+    <color name="bg_9E">#9E9E9E</color>
+    <color name="bg_a0">#A0A0A0</color>
+    <color name="bg_b0">#B0B0B0</color>
+    <color name="bg_be">#BEBEBE</color>
+    <color name="bg_c3">#C3C3C3</color>
+    <color name="bg_c4">#C4C4C4</color>
+    <color name="bg_cc">#CCCCCC</color>
+    <color name="bg_d1">#D1D1D1</color>
+    <color name="bg_d4">#D4D4D4</color>
+    <color name="bg_d5">#D5D5D5</color>
+    <color name="bg_d7">#D7D7D7</color>
+    <color name="bg_df">#DFDFDF</color>
+    <color name="bg_e4">#E4E4E4</color>
+    <color name="bg_e7">#E7E7E7</color>
+    <color name="bg_ea">#EAEAEA</color>
+    <color name="bg_eb">#EBEBEB</color>
+    <color name="bg_ed">#EDEDED</color>
+    <color name="bg_ef">#EFEFEF</color>
+    <color name="tx_ef">#0084ff</color>
+    <color name="bg_f0">#F0F0F0</color>
+    <color name="bg_f1">#F1F1F1</color>
+    <color name="bg_f2">#F2F2F2</color>
+    <color name="bg_f3">#F3F3F3</color>
+    <color name="bg_f8">#F8F8F8</color>
+    <color name="bg_f9">#F9F9F9</color>
+    <color name="bg_ff">#FFFFFF</color>
+    <color name="bg_0000">#00000000</color>
+    <color name="bg_f000">#ff000000</color>
+    <color name="bg_e000">#e0000000</color>
+    <color name="bg_0d00">#0D000000</color>
+    <color name="bg_33000000">#33000000</color>
+    <color name="bg_80000000">#80000000</color>
+    <color name="bg_f09c">#FF0099CC</color>
+    <color name="bg_0d74bc">#0D74BC</color>
+    <color name="bg_00f">#0000FF</color>
+    <color name="bg_3B85D1">#3B85D1</color>
+    <color name="bg_edf1f4">#EDF1F4</color>
+    <color name="bg_336dad">#336DAB</color>
+    <color name="bg_0084ff">#0084FF</color>
+    <color name="bg_2e2930">#2E2930</color>
+    <color name="bg_eef1f4">#EEF1F4</color>
+    <color name="bg_f1f6fb">#F1F6FB</color>
+    <color name="bg_e79056">#e79056</color>
+    <color name="bg_5ea9aa">#5ea9aa</color>
+    <color name="bg_262626">#262626</color>
+    <color name="bg_707070">#707070</color>
+    <color name="bg_8f8f8f">#8f8f8f</color>
+    <color name="bg_4c4c4c">#4c4c4c</color>
+    <color name="bg_f8f8f8">#f8f8f8</color>
+    <color name="bg_f2f2f2">#f2f2f2</color>
+    <color name="bg_f5f5f5">#f5f5f5</color>
+    <color name="bg_ededed">#ededed</color>
+    <color name="bg_464646">#464646</color>
+    <color name="bg_b2b2b2">#b2b2b2</color>
+    <color name="bg_d7d7db">#d7d7db</color>
+    <color name="bg_007aff">#007aff</color>
+    <color name="bg_ff3b30">#ff3b30</color>
+    <color name="bg_eeeeee">#eeeeee</color>
+    <color name="bg_f7f7f7">#f7f7f7</color>
+    <color name="bg_dda066">#dda066</color>
+    <color name="bg_fcfcfc">#fcfcfc</color>
+    <color name="bg_e2e2e2">#e2e2e2</color>
+    <color name="bg_fc7700">#fc7700</color>
+    <color name="bg_dcdcdc">#dcdcdc</color>
+    <color name="bg_e6e6e6">#e6e6e6</color>
+
+    <color name="bg_4de6e6e6">#4Dffffff</color>
+    <color name="bg_b3e6e6e6">#b3ffffff</color>
+
+    <color name="black">#000000</color>
+    <color name="gray_trans_80">#dd1c2127</color>
+    <color name="tiaoguo_back">#66000000</color>
+    <color name="bg_4d000000">#4D000000</color>
+    <color name="bg_99000000">#99000000</color>
+    <color name="bg_b3000000">#b3000000</color>
+    <color name="bg_4dfc7700">#4Dfc7700</color>
+    <color name="bg_fff">#fff</color>
+
+    <color name="bg_4d34A350">#4D34A350</color>
+    <color name="white">#ffffff</color>
+    <color name="black_trans_80">#dd000000</color>
+    <color name="bg_64ffffff">#64ffffff</color>
+    <color name="bg_f2ffffff">#F2ffffff</color>
+    <color name="white1">#00ffffff</color>
+    <color name="black_trans_40">#64000000</color>
+    <color name="red">#FFC93437</color>
+    <color name="yellow">#FFF7D23E</color>
+    <color name="green">#FF34A350</color>
+    <color name="gray">#aaaaaa</color>
+    <color name="light_blue">#6593cb</color>
+    <color name="light_blue_2">#226593cb</color>
+    <color name="view_line">#d6d6d6</color>
+
+
+    <color name="case_text_tital_detail">#8f8f8f</color>
+    <color name="case_text_tital_name">#262626</color>
+    <color name="navbar_bottom_border_color">#d4d4d4</color>
+    <color name="bgColor_overlay">#60000000</color>
+
+    <!-- timerpike -->
+    <color name="touming">#00000000</color>
+    <color name="bg_8c000000">#8c000000</color>
+    <color name="bg_cc000000">#cc000000</color>
+    <color name="activity_bg">#ffe7e7e7</color>
+    <color name="color_text_01">#ffc5c9ce</color>
+    <color name="color_text_03">#ffb1b7be</color>
+    <color name="split_line_color">#ffc9d1d9</color>
+    <color name="split_line_bootom_color">#ffa8adb3</color>
+    <color name="input_stock">#ffbdc7d8</color>
+    <color name="color_text_02">#ff181c20</color>
+    <color name="location_circle_bg">#320483b9</color>
+    <color name="indicator_color">#fffff18f</color>
+    <color name="tabs_click">#ff8a153e</color>
+    <color name="bank_bg01">#ff002142</color>
+    <color name="bank_bg02">#ffe2607b</color>
+    <color name="bank_FF6C6C6C">#FF6C6C6C</color>
+    <color name="text_color_02">#FF6C6C6C</color>
+    <color name="sort_catagory">#FFE0E0E0</color>
+    <color name="gray_type_list">#e3e4e8</color>
+
+    <color name="province_line_border">#C7C7C7</color>
+    <color name="liji_c_blue">#26A5FF</color>
+    <color name="liji_material_blue_500">#03a9f4</color>
+    <color name="liji_material_blue_700">#0288d1</color>
+    <color name="liji_material_red_500">#e51c23</color>
+    <color name="liji_material_red_700">#d01716</color>
+
 </resources>
